--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
    <link href="https://fonts.googleapis.com/css?family=Acme|Amatic+SC|Merriweather|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" >
@@ -84,7 +86,7 @@
             <h3>300 push ups - 100 wide push ups - 6 days a week</h3>
 <!--            <h3><a>Push up counter</a></h3>-->
         </div>
-        <div class="box" id="diet">
+        <div class="box diet_box" id="diet">
             <h2>Diet</h2>
             <div id="blue_zones">
                 <a id="bz_link" href="https://www.bluezones.com/recipes/food-guidelines/">
